--- a/public/style.css
+++ b/public/style.css
@@ -4,9 +4,9 @@
 }
 
 .top {
-  background: #28d4ce;
+  background: #1d1d1d;
   padding: 60px;
-  color: #003b32;
+  color: #e3e3e3;
   font-size: 30px;
   text-align: center;
   font-family: Arial;
