--- a/public/style.css
+++ b/public/style.css
@@ -9,12 +9,14 @@
   color: #e3e3e3;
   font-size: 30px;
   text-align: center;
-  font-family: Arial;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .body {
   color: #b8f5e9;
-  font-family: Arial;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .information {
@@ -38,7 +40,6 @@ td {
 }
 
 .backgroundImage {
-  background-image: url("test.gif");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -61,4 +62,17 @@ iframe {
 
 hr {
   border: none;
+}
+
+.unsplashInfo,
+.unsplashInfo:link,
+.unsplashInfo:visited {
+  position: relative;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.unsplashInfo:hover {
+  color: #cccccc;
 }
